@@ -94,9 +94,12 @@ slp_current_unremove(PyTaskletObject* task)
  * problems elsewhere (why didn't the tasklet die when instructed to?)
  */
 static int
-tasklet_has_c_stack(PyTaskletObject *t)
+tasklet_has_c_stack_and_thread(PyTaskletObject *t)
 {
-    return t->f.frame && t->cstate && t->cstate->tstate && t->cstate->nesting_level != 0 ;
+    /* The GC may call this function for a current tasklet.
+     * Therefore we need the complete check. */
+    return t->f.frame && t->cstate && t->cstate->tstate &&
+        (t->cstate->tstate->st.current == t ? t->cstate->tstate->st.nesting_level : t->cstate->nesting_level) != 0;
 }
 
 static int
@@ -107,7 +110,7 @@ tasklet_traverse(PyTaskletObject *t, visitproc visit, void *arg)
     /* tasklets that need to be switched to for the kill, can't be collected.
      * Only trivial decrefs are allowed during GC collect
      */
-    if (tasklet_has_c_stack(t))
+    if (tasklet_has_c_stack_and_thread(t))
         PyObject_GC_Collectable((PyObject *)t, visit, arg, 0);
 
     /* we own the "execute reference" of all the frames */
@@ -186,7 +189,7 @@ static void
 tasklet_dealloc(PyTaskletObject *t)
 {
     PyObject_GC_UnTrack(t);
-    if (tasklet_has_c_stack(t)) {
+    if (tasklet_has_c_stack_and_thread(t)) {
         /*
          * we want to cleanly kill the tasklet in the case it
          * was forgotten. One way would be to resurrect it,
@@ -205,7 +208,13 @@ tasklet_dealloc(PyTaskletObject *t)
     if (t->tsk_weakreflist != NULL)
         PyObject_ClearWeakRefs((PyObject *)t);
     if (t->cstate != NULL) {
-        assert(t->cstate->task != t || Py_SIZE(t->cstate) == 0);
+        assert(t->cstate->task != t || Py_SIZE(t->cstate) == 0 || t->cstate->tstate == NULL);
+        if (t->cstate->task == t) {
+            t->cstate->task = NULL;
+            if (Py_VerboseFlag && Py_SIZE(t->cstate) != 0) {
+                PySys_WriteStderr("# tasklet_dealloc: warning: tasklet %p has a non zero C-stack. \n", (void*)t);
+            }
+        }
         Py_DECREF(t->cstate);
     }
     Py_DECREF(t->tempval);
@@ -248,7 +257,7 @@ PyTasklet_BindEx(PyTaskletObject *task, PyObject *func, PyObject *args, PyObject
     if (PyTasklet_Scheduled(task)) {
         RUNTIME_ERROR("tasklet is scheduled", -1);
     }
-    if (tasklet_has_c_stack(task)) {
+    if (PyTasklet_GetNestingLevel(task)) {
         RUNTIME_ERROR("tasklet has C state on its stack", -1);
     }
     if (ts && task == ts->st.main && args == NULL && kwargs == NULL) {
@@ -569,7 +578,7 @@ tasklet_bind_thread(PyObject *self, PyObject *args)
     if (PyTasklet_Scheduled(task) && !task->flags.blocked) {
         RUNTIME_ERROR("can't (re)bind a runnable tasklet", NULL);
     }
-    if (tasklet_has_c_stack(task)) {
+    if (PyTasklet_GetNestingLevel(task)) {
         RUNTIME_ERROR("tasklet has C state on its stack", NULL);
     }
     if (target_tid != -1) {
