@@ -4,6 +4,7 @@ import unittest
 import stackless
 import sys
 import time
+from stackless import _test_nostacklesscall as apply
 
 from support import StacklessTestCase, AsTaskletTestCase
 try:
@@ -390,6 +391,40 @@ class DeadThreadTest(RemoteTaskletTests):
         self.assertEqual(t.thread_id, -1)
         t.bind_thread()
         self.assertEqual(t.thread_id, stackless.getcurrent().thread_id)
+
+    def test_rebind_from_dead_fail_cstate(self):
+        # A test for https://bitbucket.org/stackless-dev/stackless/issues/92
+        loop = True
+
+        def task():
+            while loop:
+                try:
+                    stackless.main.switch()
+                except TaskletExit:
+                    pass
+
+        def other_thread_main():
+            tlet.bind_thread()
+            tlet.run()
+
+        tlet = stackless.tasklet().bind(apply, (task,))
+        t = threading.Thread(target=other_thread_main, name="other thread")
+        t.start()
+        t.join()
+        time.sleep(0.1)  # other_thread needs some time to be destroyed
+
+        self.assertEqual(tlet.thread_id, -1)
+        self.assertFalse(tlet.alive)
+        self.assertFalse(tlet.restorable)
+        self.assertGreater(tlet.nesting_level, 0)
+        loop = False
+        try:
+            self.assertRaisesRegex(RuntimeError, "tasklet has C state on its stack", tlet.bind_thread)
+        except AssertionError:
+            tlet.kill()  # causes an assertion error in debug builds of 2.7.9-slp
+            raise
+        # the tasklet has no thread
+        self.assertEqual(tlet.thread_id, -1)
 
     def test_methods_on_dead(self):
         """test that tasklet methods on a dead tasklet behave well"""
